<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InsertActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/id"/>
    <EditText
        android:id="@+id/add_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/add_id"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/phone"/>
    <EditText
        android:id="@+id/add_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text="@string/add_phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/address"/>
    <EditText
        android:id="@+id/add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_address"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:id="@+id/add_btn_insert"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add"/>
        <Button
            android:id="@+id/add_btn_clear"
            android:textColor="@color/black"
            android:layout_marginLeft="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear"/>
    </LinearLayout>

</LinearLayout>